  - Fixes issues wrt the News module being upgraded before the cms_routes table is created.
  - Fixes issue with compilation process of stylesheets when using smarty tags
  - Fixes issue with showtemplate=false causing ajax stuff to be called twice.
  - Fixes issue with aliases on sectionheaders being navigable. (Now throws 404 error)

  
Version 1.11.4 - Fernandina
-----------------------------
Core - General
  - Fixes problem with cms_plugins not being found in the parser
  - cms_date_format plugin is no longer cachable
  - Removes more wiki url stuff
  - debug.log never allowed to live more than 24 hours
  - Fixes preview in addcontent
  - Fixes problem with CreateTable in mysqli mode. (ENGINE and CHARSET issues)
  - Fixes problem with modifiers not existing in parser stage. Now loading all modifiers
  - Fixes to FileManager copy and move in regular mode
  - Fixes to ImageManager when deleting files in a dir below the uploads/images path
  - Fixes to cleaning of values in edit_user and add_user wrt email fields (now consistent)
  - Numerous SSL fixes
  - {uploads_url} tag now uses cms_config->smart_uploads_url() (new function)
  - Fixes a minor issue with cleaning of the incoming page variable
  - Fixes an error with UDT's and syntax hilighters
  - Minor fix to cms_stylesheet
  - Fixes problem with Events listing none active modules.

Core - Bug Reports:
  - #8238 Assets loaded as http instead of https when ssl is enabled for /admin area
  - #8315 Crash in Content Page Edit: exit / die without error message
  - #8386 Function redirect();
  - #8409 Content block does not appear in Pages if sitedown
  - #8419 E-mail address for user not accepted if having '-' character on it
  - #8563 Cannot add 'separator' if 'Page URL's are required'
  - #8564 Images cannot be deleted in Image Manager
  - #8571 NCleanGrey admin theme on 1.11.2.1
  - #8672 Dropzone don't remember the selected directory
  - #8673 Images can't be deleted in Image Manager within created folders